# pet-pvp

./: Cargo.toml  README.md  Structure.md
.github/workflows/: CICD.yml
crates/client/: Cargo.toml
crates/client/src/: input.rs  main.rs  network.rs  resources.rs  ui.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  network.rs  resources.rs  systems.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  movement.rs  protocol.rs  resources.rs  systems.rs
docs/: Bevy.md  Concept.md  DEVLOG.md  IntroductionToGameDesign.md  Network_Gameplay.md  OOPvsECS.md  Role_Shared.md  SingleSourceOfTruth.md  StoryAndNarrativeDevelopmentForVideoGames_1.md  StoryAndNarrativeDevelopmentForVideoGames_2.md  takenote.md
src/: main.rs
