[workspace]
resolver = "3"
members = [
    "crates/client",
    "crates/server",
    "crates/shared",
]

[workspace.dependencies]
bevy = "0.17.3"
bevy_rapier2d = { version = "0.32.0", features = [ "simd-stable", "debug-render-2d" ] }
shared = { path = "crates/shared" }
bevy_renet = "3.0.0"
renet = "1.2.0"
serde = { version = "1.0.228", features = [ "derive" ] }
bincode = "1.3.3"   
